# soccer-analytics-pipeline

./: .gitignore  README-WEB-INTEGRATION.md  README.md  agent.py  pyproject.toml  requirements-web.txt  requirements.txt  simple_web_app.py  start_api.py  test_api.py  test_full_integration.py  test_ml_integration.py  test_server.py  web_app.py
.github/workflows/: ci.yml
reports/: feedback_Barcelona_sample.json
scripts/: dataset_download.py  run_realtime.py
src/soccer_analytics/: config.py  ml_predictor.py  pipeline.py
src/soccer_analytics/modules/: __init__.py  detection.py  events.py  goal_detection.py  homography.py  passes.py  performance.py  possession.py  stats_overlay.py  team_classifier.py  tracking.py
src/soccer_analytics/utils/: video_stream.py
tests/: test_color_utils.py  test_possession_stub.py
